Add Different Garbagce Collectors